--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,19 @@
 * {
-    background-color: lightblue;
-  }
+    text-align: center;
+    margin-top: 1%;
+}
+
+.login-form {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+    height: 100%
+}
+
+h3 {
+    font-weight: bold;
+    font-size: larger;
+    color: red;
+}
+
